More bug fixes...

--- a/examples/html/working_demo.html
+++ b/examples/html/working_demo.html
@@ -273,11 +273,11 @@
 
             // Automated pipeline check
             try {
-                const testCode = "ILVδ000000000000Z4%AXXOK6KN";
-                const result = perceptualSystem.decode(testCode);
-                if (!result.narrative || !result.narrative.primary) {
+                //const testCode = "ILVδ000000000000Z4%AXXOK6KN";
+                //const result = perceptualSystem.decode(testCode);
+                //if (!result.narrative || !result.narrative.primary) {
                     throw new Error("Self-test failed: narrative missing");
-                }
+               // }
                 log("Self-test passed: decoding output is valid.");
             } catch (err) {
                 log("Self-test failed: " + err.message);
