More bug fixes...

--- a/examples/html/working_demo.html
+++ b/examples/html/working_demo.html
@@ -101,7 +101,21 @@
     <script src="symbolic_encoder.js"></script>
     <script src="symbolic_decoder.js"></script>
     <script src="perceptual_system.js"></script>
-    
+    <script>
+        (async () => {
+          const canvas = document.getElementById('inputCanvas');
+          const ctx = canvas.getContext('2d');
+          // 1-pixel black for smoke test
+          ctx.fillStyle = '#000'; ctx.fillRect(0,0,1,1);
+          const smoke = ctx.getImageData(0,0,canvas.width,canvas.height);
+          try {
+            const res = perceptualSystem.encode(smoke);
+            console.log('[smoke-test] code:', res.code);
+          } catch(e) {
+            console.error('[smoke-test] FAILED', e);
+          }
+        })();
+        </script>
     <script>
         let encoder, decoder;
         if (window.location.protocol === "file:") {
