--- a/examples/html/working_demo.html
+++ b/examples/html/working_demo.html
@@ -330,5 +330,9 @@
          /* ───── Smoke test: 1-pixel black image should round-trip ───── */
  
     </script>
+    <script>
+        /* Call init once the whole page (scripts + images) is ready */
+        window.addEventListener('load', init);
+        </script>
 </body>
 </html>
